# Nexus_Core

./: .env.example  .gitignore  404.html  CLAUDE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  publish.yml
ACTION_PLAN/: index.html
ARCHITECTURE/: index.html
CHANGELOG/: index.html
DECISIONS/: index.html
REQUIREMENTS/: index.html
SECURITY/: index.html
TEST_STRATEGY/: index.html
api/cache/: index.html
api/health/: index.html
api/loader/: index.html
api/providers/: index.html
contributing/: index.html
docs/: ACTION_PLAN.md  ACTION_PLAN_FMP.md  ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  FMP_ENDPOINTS_TRACKER.md  REPORT.md  REQUIREMENTS.md  SECURITY.md  TEST_STRATEGY.md  contributing.md  index.md
docs/api/: cache.md  health.md  loader.md  providers.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: caching.md  dataloader.md  error-handling.md  providers.md
examples/: 01_quickstart.py  02_multi_provider_analysis.py  03_caching_demo.py  04_error_handling.py  05_readonly_mode.py  06_parallel_fetch.py  README.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/caching/: index.html
guide/dataloader/: index.html
guide/error-handling/: index.html
guide/providers/: index.html
scripts/: smoke_test.py
search/: search_index.json
src/: __init__.py
src/data_loader/: __init__.py  cache.py  circuit_breaker.py  config.py  health.py  http_client.py  loader.py  logging.py  qos_router.py  retry.py
src/data_loader/providers/: __init__.py  base.py  fmp.py  fred.py  polygon.py
src/data_loader/providers/fmp/: __init__.py  analyst.py  base.py  calendars.py  charts.py  company.py  financials.py  insider.py  institutional.py  quotes.py  registry.py  search.py
tests/: __init__.py  conftest.py
tests/e2e/: test_happy_path.py
tests/integration/: test_providers_integration.py  test_resilience_integration.py
tests/unit/: test_base_provider.py  test_cache.py  test_circuit_breaker.py  test_config.py  test_fmp_provider.py  test_fred_provider.py  test_health.py  test_http_client.py  test_loader.py  test_logging.py  test_polygon_provider.py  test_qos_router.py  test_retry.py  test_security.py
tools/: __init__.py
tools/benchmarks/: __init__.py  benchmark.py
tools/diagnostics/: __init__.py  endpoint_health.py
